# Scansione-Documenti

./: README.md  piano_sviluppo_ddt_scanner_1.md
ddt-scanner-manager/: .gitignore  CLAUDE.md  CONFIGURAZIONE_INIZIALE.md  build.bat  ddt_scanner.spec  pyproject.toml  requirements.txt
ddt-scanner-manager/src/: config.py  main.py
ddt-scanner-manager/src/database/: db.py  models.py
ddt-scanner-manager/src/gui/: admin_panel.py  barcode_editor.py  document_viewer.py  login_dialog.py  main_window.py  queue_panel.py  styles.py
ddt-scanner-manager/src/ocr/: barcode_reader.py
ddt-scanner-manager/src/utils/: file_manager.py  logger.py  pdf_renderer.py
ddt-scanner-manager/src/watcher/: folder_watcher.py
ddt-scanner-manager/tests/: test_barcode_reader.py  test_db.py  test_file_manager.py  test_folder_watcher.py
