[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ddt-scanner-manager"
version = "1.0.0"
description = "DDT Scanner Manager per Unieuro — gestione DDT scansionati"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "bcrypt>=4.1.0",
    "pyzbar>=0.1.9",
    "opencv-python>=4.9.0",
    "Pillow>=10.0.0",
    "watchdog>=3.0.0",
    "pdf2image>=1.16.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
